CMakeLists are updated. Headers are added to the include subfolders of each component. Unnecessary files are deleted.

--- a/components/I2Cdev/CMakeLists.txt
+++ b/components/I2Cdev/CMakeLists.txt
@@ -1,4 +1,6 @@
-idf_component_register(SRCS "I2Cdev.cpp"
-                       INCLUDE_DIRS "."
-					   PRIV_REQUIRES driver
-)
+set(srcs
+    "I2Cdev.cpp")
+
+idf_component_register(SRCS "${srcs}"
+                       INCLUDE_DIRS "include"
+					   PRIV_REQUIRES driver)
